// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Separator Separator default 1`] = `
.c1 {
  width: 100%;
  height: 1px;
  background-color: #EBEBE8;
}

.c0 {
  height: 400px;
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots Atoms / Separator Separator vertical 1`] = `
.c1 {
  width: 1px;
  height: 100%;
  background-color: #EBEBE8;
}

.c0 {
  height: 400px;
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
</div>
`;

exports[`Storyshots Atoms / Separator Separators with different color 1`] = `
.c1 {
  width: 100%;
  height: 1px;
  background-color: #FF1900;
}

.c2 {
  width: 100%;
  height: 1px;
  background-color: #282823;
}

.c0 {
  height: 400px;
  width: 100%;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <br />
  <div
    className="c2"
  />
</div>
`;
